<resources>
    <string name="app_name">My Challange Chapter Three</string>
    <string name="first">Screen 1</string>
    <string name="second">Screen 2</string>
    <string name="Third">Screen 3</string>
    <string name="fourth">Screen 4</string>
    <string name="to_second">Go To Screen 2</string>
    <string name="to_third">Go To Screen 3</string>
    <string name="to_fourth">Go To Screen 4</string>
    <string name="back_three">Back To Screen 3</string>
    <string name="name_input">Input Name</string>
    <string name="name_view">Name</string>
    <string name="age_input">Input Age</string>
    <string name="age_view">Age</string>
    <string name="address_input">Input Address</string>
    <string name="address_view">Address</string>
    <string name="job_input">Input Job</string>
    <string name="job_view">Job</string>
</resources>